# path-to-flash

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md
src/: BUILD  README.md  example_main.cpp  main.cpp  test_setup.cpp
src/base/: BUILD  README.md  attention_base.cpp  attention_base.hpp  attention_base_test.cpp
src/common/: BUILD  benchmark_utils.cpp  benchmark_utils.hpp  macros.hpp  matrix_utils.hpp
src/phase1/: BUILD  GETTING_STARTED.md  README.md  matrix_ops.cpp  matrix_ops.hpp  naive_attention.cpp  naive_attention.hpp  naive_attention_test.cpp  phase1_main.cpp  softmax.cpp  softmax.hpp  unit_tests.cpp
