"""Path to Flash - A project to learn about attention through modern C++."""

module(
    name = "path-2-flash",
    version = "0.1.0",
)

# Generate compile_commands.json for clangd
# bazel run @hedron_compile_commands//:refresh_all
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
)

bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "fmt", version = "11.2.0")
